# stop-card-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  backend.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260628_0001_initial.py
app/: __init__.py  cli.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: admin.py  health.py  reference.py  stopcards.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/models/: __init__.py  admin.py  catalog.py  stopcard.py
app/schemas/: admin.py  stopcard.py
app/services/: audit.py  stopcards.py  storage.py  telegram.py
deploy/: README.md
deploy/nginx/: bootstrap.conf  nginx.conf  production.conf  proxy-common.conf
deploy/scripts/: checkout-and-deploy.sh  deploy-update.sh  generate-production-env.sh  harden-host.sh  init-production.sh  renew-certificates.sh
deploy/ssh/: 99-stopcard-hardening.conf
tests/: test_api_contract.py  test_payload.py  test_security.py  test_storage.py  test_telegram.py
